# NextTensor

./: CMakeLists.txt  README.md
include/core/: NextMetadata.h  NextTensor.h
include/utils/: BroadcastUtils.h  DType.h  NextOps.h  NextUtils.h  Ops.h
src/test/: library.cpp
